<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textViewResultData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBack"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onBack"
            android:text="@string/back"
            android:textColor="@color/purple_500"
            android:textSize="26sp" />

        <Button
            android:id="@+id/buttonExit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onExit"
            android:text="@string/exit"
            android:textColor="@color/purple_500"
            android:textSize="26sp" />

    </LinearLayout>
</LinearLayout>